<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_500"
        >
    <include layout="@layout/activity_toolbar"
        android:id="@+id/home_toolbar_include"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true" />


<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:cardCornerRadius="8dp"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_margin="10dp"-->
<!--            android:layout_below="@id/home_toolbar_include"-->
<!--            android:id="@+id/cardvie_top_homescreen"-->
<!--            android:elevation="10dp">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/home_toolbar_include"
            android:id="@+id/ll10">
            <br.alexandrehtrb.iridescentview.IridescentView
                android:id="@+id/iridescent_star"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:layout_below="@id/home_toolbar_include"
                android:src="@drawable/logo"/>
        </LinearLayout>
<!--        </androidx.cardview.widget.CardView>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/ll0"
            android:layout_below="@id/ll10"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/t01"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/jai_shree_shyam"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/t02"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/saware_seth_ki_jai"/>

        </LinearLayout>
    <com.smarteist.autoimageslider.SliderView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/ll0"
        android:id="@+id/home_slider_view"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_slider_view"
        android:padding="10dp"
        android:id="@+id/ll1"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_marquee"
            android:fontFamily="@font/arvo_bold_italic"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/welcome_marquue_txt"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="-10dp"
            android:background="@color/purple_500"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_count_txt_homescreen"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="COUNT: 15"
            android:layout_marginBottom="5dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:weightSum="2"
        android:id="@+id/ll2"
        android:background="@drawable/butmapbg"
        android:orientation="horizontal">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp"
            android:id="@+id/cardview_one">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:text="@string/todays_darsh"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:maxLines="2"
                android:minLines="2"
                android:textAlignment="center"
                android:id="@+id/todays_darshan_txt"/>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp"
            android:layout_margin="10dp"
            android:id="@+id/cardview_two">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:text="@string/name_shandna"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:maxLines="2"
                android:minLines="2"
                android:textAlignment="center"
                android:id="@+id/name_shadhna_txt"/>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/ll2"
        android:id="@+id/ll3"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/textview_one"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="25dp"
            android:fontFamily="@font/muli_black"
            android:id="@+id/textview_one"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/textview_two"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="25dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:id="@+id/textview_two"/>

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/ll3"
        android:scaleType="fitXY"
        android:id="@+id/poster_img_homescreen"
        android:src="@drawable/banner_one"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_marquee"
            android:fontFamily="@font/arvo_bold_italic"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:maxLines="1"
            android:minLines="1"
            android:layout_below="@id/poster_img_homescreen"
            android:layout_margin="10dp"
            android:id="@+id/poster_textview_homescreen"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/poster_textview_homescreen"
            android:background="@color/white"
            android:padding="10dp"
            android:id="@+id/ll4"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mukta_vaani_semibold"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="15dp"
            android:id="@+id/para_text_poster_homescren"
            android:text="@string/lorem"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/ll5"
            android:layout_below="@id/ll4"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/t1"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/jai_shree_shyam"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/t2"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/saware_seth_ki_jai"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll5"
            android:layout_marginTop="15dp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:fontFamily="@font/kaushan_script"
                android:textColor="@color/purple_500"
                android:text="COPYRIGHTS SHREE SHAKSHYAM MANDAL"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:id="@+id/copyright_text"/>

        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>